--- a/main.scss
+++ b/main.scss
@@ -129,19 +129,15 @@ header {
         }
     }
 
-    .content>li:hover {
-        background-color: purple;
-        border-bottom: 1px solid red;
-
-        a {
-            border-bottom: 1px solid #bab6b6;
-        }
+    .content>li>a:hover {
+        color: rgb(198, 93, 124);
 
     }
 
     .content>li>ul>li:hover {
         background-color: purple;
         border-bottom: 1px solid red;
+
 
         a {}
     }
@@ -154,6 +150,14 @@ header {
     //     position: absolute;
     //     left: 200px;
     // }
+    .tablecontent {
+        table {
+
+            position: absolute;
+            display: none;
+
+        }
+    }
 }
 
 body {
@@ -161,6 +165,8 @@ body {
     width: 100%;
     height: 100%;
     background-size: cover;
+
+
 }
 
 .img1 {
@@ -172,6 +178,11 @@ body {
         height: 300px;
         justify-items: center;
     }
+}
+
+.imgfooter {
+    justify-content: center;
+    align-items: center;
 }
 
 .buttonthanhcuon {
