--- a/bodymain.css
+++ b/bodymain.css
@@ -33,3 +33,10 @@
     background-color: rgb(88, 82, 82);
     border: 1px solid red;
 }
+
+.containerdrop {
+    position: absolute;
+    display: block;
+    left: 20px;
+    top: 90px;
+}
