--- a/mainmenu.scss
+++ b/mainmenu.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.navct {
+    height: 90px;
+}
+
 header {
     .menu {
         background-color: rgb(88, 82, 82);
@@ -18,6 +22,7 @@ header {
         top: 20px;
         left: 117px;
 
+        margin-left: 30px;
 
         img {
             width: 145px;
@@ -190,6 +195,5 @@ body {
     top: 200px;
     justify-content: center;
 }
-.contanermid{
-    
-}
+
+.contanermid {}
